--- a/app.json
+++ b/app.json
@@ -21,10 +21,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.radwanalzerary.myapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "83171cb9-97b7-4acc-987b-cd894d900429"
+      }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
