--- a/package.json
+++ b/package.json
@@ -9,13 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.7",
+    "@gorhom/bottom-sheet": "^4",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/core": "github:react-navigation/core",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
+    "@react-navigation/stack": "^6.3.23",
+    "@types/react": "~18.2.14",
+    "expo": "~50.0.11",
+    "expo-blur": "^12.6.0",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "^6.7.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-lazyload": "^1.1.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-toast-message": "^2.1.7",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
